# orbiter-community-translations

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  justfile  pyproject.toml
.github/workflows/: checks.yml  deploy.yml
orbiter_translations/: __init__.py  version.py
orbiter_translations/argo/: yaml_demo.py
orbiter_translations/automic/: xml_demo.py
orbiter_translations/autosys/: __init__.py  jil_demo.py
orbiter_translations/control_m/: xml_demo.py
orbiter_translations/cron/: __init__.py  crontab_base.py  crontab_ssh.py
orbiter_translations/dag_factory/: yaml_base.py
orbiter_translations/data_stage/: xml_demo.py
orbiter_translations/esp/: txt_demo.py  wld_parser.py
orbiter_translations/iwa/: file_type.py  txt_demo.py
orbiter_translations/jams/: xml_demo.py
orbiter_translations/jenkins/: json_demo.py
orbiter_translations/kestra/: yaml_demo.py
orbiter_translations/luigi/: __init__.py  python_demo.py
orbiter_translations/matillion/: matillion_demo.py  yaml_demo.py
orbiter_translations/oozie/: __init__.py  xml_demo.py
orbiter_translations/ssis/: xml_demo.py
orbiter_translations/talend/: _json_demo.py  json_demo.py  talend_demo.py
orbiter_translations/tidal/: xml_demo.py
tests/: conftest.py
tests/argo/: argo_yaml_demo_test.py
tests/argo/demo/workflow/: test.yaml
tests/automic/demo/: automic_demo_test.py
tests/automic/demo/workflow/: demo.xml
tests/autosys/: jil_demo_test.py
tests/autosys/demo/workflow/: demo.jil
tests/control_m/demo/: control_m_demo_test.py
tests/control_m/demo/workflow/: demo.xml
tests/cron/: cron_base_test.py
tests/cron/demo/workflow/: job.cron
tests/dag_factory/: dag_factory_translation_test.py  yaml_base_test.py
tests/dag_factory/workflow/: example_dag_factory.yml
tests/data_stage/demo/: data_stage_demo_test.py
tests/data_stage/demo/workflow/: PH_Insert_EMPLOYEE_DIM.xml  demo.xml
tests/esp/: esp_demo_test.py
tests/esp/demo/workflow/: demo.txt
tests/iwa/: iwa_demo_test.py
tests/iwa/demo/workflow/: sample.txt
tests/jams/: jams_demo_test.py
tests/jams/demo/workflow/: demo.xml
tests/jenkins/demo/: jenkins_demo_test.py
tests/jenkins/demo/workflow/: demo1.json
tests/kestra/: yaml_demo_test.py
tests/kestra/demo/workflow/: test.yaml
tests/luigi/: luigi_python_demo_test.py
tests/luigi/demo/workflow/: sample.py
tests/matillion/demo/: matillion_demo_test.py  matillion_yaml_demo_test.py
tests/matillion/demo/workflow/: demo.yaml
tests/oozie/demo/: oozie_demo_test.py
tests/oozie/demo/workflow/: coordinator.xml  sample.xml  workflow.xml
tests/ssis/demo/: ssis_demo_test.py
tests/ssis/demo/workflow/: SampleSSISWorflow.xml
tests/talend/demo/: json_demo_test.py  talend_demo_test.py
tests/talend/demo/workflow/: demo.json
tests/tidal/: tidal_demo_test.py
(+4 files in other folders)
